--- a/007_basics.html
+++ b/007_basics.html
@@ -20,11 +20,27 @@
 				<li>⌘+Left click to add a cursor in an arbitrary location</li>
 			</ol>
 		</li>
+		<li>
+			Command pane
+			<ol>
+				<li>"Count from 1" can be used to create numeric and alphabetical sequences.</li>
+				
+			</ol>
+		</li>
 	</ol>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </body>
 <script>
-	function testfunction(){ console.log('cool you made it!'); }
+	function testfunction(){
+		for( var i=0; i<10; i++ ){
+			var exclamation = "!";
+			for(var j=0; j<i; j++ ){
+				exclamation += exclamation;
+			}
+
+			console.log('cool you made it'+exclamation);
+		}
+	}
 </script>
 </html>
 
