content in for presentation

--- a/007_basics.html
+++ b/007_basics.html
@@ -4,6 +4,14 @@
 	<h1>SUBLIME TEXT BASICS!</h1>
 	<ol>
 		<li>
+			Finding
+			<ol>
+				<li>⌘+F Find</li>
+				<li>⌘+ALT+F Find</li>
+				<li>⌘+SHIFT+F Find & Replace in Folders</li>
+				<li>Folder search inclusion & exclusion filters in "Where" field: *.txt,-*.rtf</li>
+			</ol>
+		<li>
 			⌘+P Goto Anything
 			<ol>
 				<li>Search a file by starting with #</li>
@@ -18,13 +26,24 @@
 				<li>Selection by next occurrence: ⌘+D</li>
 				<li>Adding more cursors up or down: CTRL+SHIFT+UP / CTRL+SHIFT+DOWN</li>
 				<li>⌘+Left click to add a cursor in an arbitrary location</li>
+				<li>⌘+SHIFT+A, ⌘+SHIFT+L: Adds cursors on EVERY LINE</li>
 			</ol>
 		</li>
 		<li>
 			Command pane
 			<ol>
-				<li>"Count from 1" can be used to create numeric and alphabetical sequences.</li>
-				
+				<li>Case Conversion: Uppercase (⌘+K+U), lowercase (⌘+K+L), title case, swap case</li>
+				<li>Line sorting, line shuffling, deleting repeated lines (permute unique), reversing the order of lines</li>
+				<!-- Toggling comments: ⌘+/ is for single lines, ⌘+ALT+/ for block comments -->
+			</ol>
+		</li>
+		<li>
+			Etcetera
+			<ol>
+				<li>Bookmarks: Set up zones in a current file to jump between common sections</li>
+				<li>Full screen - Do it. You're missing out otherwise</li>
+				<li>Distraction Free Mode - This is how programmers code in mountainside monasteries</li>
+				<li>Code Folding: Selection, ⌘+K, ⌘+level of indent</li>
 			</ol>
 		</li>
 	</ol>
