--- a/007_basics.html
+++ b/007_basics.html
@@ -7,7 +7,7 @@
 			Finding
 			<ol>
 				<li>⌘+F Find</li>
-				<li>⌘+ALT+F Find</li>
+				<li>⌘+ALT+F Find & Replace</li>
 				<li>⌘+SHIFT+F Find & Replace in Folders</li>
 				<li>Folder search inclusion & exclusion filters in "Where" field: *.txt,-*.rtf</li>
 			</ol>
@@ -30,7 +30,7 @@
 			</ol>
 		</li>
 		<li>
-			Command pane
+			Command Pane
 			<ol>
 				<li>Case Conversion: Uppercase (⌘+K+U), lowercase (⌘+K+L), title case, swap case</li>
 				<li>Line sorting, line shuffling, deleting repeated lines (permute unique), reversing the order of lines</li>
